# bls-so

./: Cargo.toml  README.md
scripts/: android_build.sh
src/: android.rs  lib.rs
